--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 				<li><a href="#">Behind the Scenes</a></li>
 				<li><a href="#">Careers</a></li>
 				<li><a href="#">About</a></li>
+				<li class="search">
+						<input type="text" autofocus placeholder="Search">
+						<img src="" />
+				</li>
 			</ul>
-
-			<div class="search">
-				<input type="text" autofocus placeholder="Search">
-				<img src="" />
-			</div>
 
 		</nav>
 		<!-- /end navigation section -->
@@ -61,7 +60,7 @@
 				<img src="img/roz.jpg" class="circlify floatify" />
 				<h3>Roz Wants You</h3>
 				<hr>
-				<p>This isn’t just a chance to work on great movies or tell stories. It’s your opportunity to bring imagination to life. At Pixar, we work side by side to turn ideas into reality. Come see what we have to offer.</p>
+				<p>This isn’t just a chance to work on great movies or tell amazing stories. It’s your opportunity to bring imagination to life. At Pixar, we work side by side to turn our ideas into reality. Come see what we have to offer.</p>
 			</div>
 
 			<div class="mainDivs">
@@ -82,7 +81,7 @@
 				<img src="img/dory.jpg" class="circlify floatify" />
 				<h3>Finding Dory</h3>
 				<hr>
-				<p>Disney•Pixar's “Finding Dory” reunites everyone’s favorite forgetful blue tang, Dory, with her friends Nemo and Marlin on a search for answers about her past. What can she remember? Who are her parents?</p>
+				<p>Disney • Pixar's “Finding Dory” reunites everyone’s favorite forgetful blue tang, Dory, with her friends Nemo and Marlin on a search for answers about her past. What can she remember? Who are her parents?</p>
 			</div>
 			
 		</section>
@@ -92,32 +91,32 @@
 		<!-- footer section -->
 		<footer>
 			
-		<hr>
+			<hr>
 
-		<div>
-			<ul>
-				<li>TM & © 1986 - 2015 Pixar. All Rights Reserved.</li>
-			</ul>
-		</div>
+			<div class="trademarking">
+				<ul>
+					<li>TM & © 1986 - 2015 Pixar. All Rights Reserved.</li>
+				</ul>
+			</div>
 
-		<div>
-			<ul>
-				<li><a href="#">Privacy</a></li>
-				<li>|</li>
-				<li><a href="#">Terms</a></li>
-				<li>|</li>
-				<li><a href="#">Sitemap</a></li>
-			</ul>
-		</div>
+			<div class="pts">
+				<ul>
+					<li><a href="#">Privacy</a></li>
+					<li>|</li>
+					<li><a href="#">Terms</a></li>
+					<li>|</li>
+					<li><a href="#">Sitemap</a></li>
+				</ul>
+			</div>
 
-		<div>
-			<ul>
-				<li><a href="#"><i class="fa fa-lg fa-facebook-square"></i></a></li>
-				<li><a href="#"><i class="fa fa-lg fa-twitter-square"></i></a></li>
-				<li><a href="#"><i class="fa fa-lg fa-google-plus-square"></i></a></li>
-				<li><a href="#"><i class="fa fa-lg fa-linkedin-square"></i></a></li>
-			</ul>
-		</div>
+			<div class="social">
+				<ul>
+					<li><a href="#"><i class="fa fa-lg fa-facebook-square"></i></a></li>
+					<li><a href="#"><i class="fa fa-lg fa-twitter-square"></i></a></li>
+					<li><a href="#"><i class="fa fa-lg fa-google-plus-square"></i></a></li>
+					<li><a href="#"><i class="fa fa-lg fa-linkedin-square"></i></a></li>
+				</ul>
+			</div>
 
 		</footer>
 		<!-- /end footer section -->
